# learn-fluent-python-clinical

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Module-1-Data-Model/: 01_data_model.py  README.md
Module-2-Data-Structures/: 02_data_structures.py
Module-4-OOP-Protocols/: 04_oop_protocols.py
Module-5-Generators-Async/: 05_generators_async.py
app/: streamlit_app.py
clinicalnlp/containers/: __init__.py  note_registry.py
clinicalnlp/core/: __init__.py  clinical_record.py  concept.py
clinicalnlp/models/: __init__.py  base_extractor.py  fhir_resource.py  ner_pipeline.py  protocols.py
clinicalnlp/pipeline/: decorators.py  fastapi_layer.py
clinicalnlp/streaming/: __init__.py  async_fhir.py  generators.py
data/: loinc_codes.json  omop_vocabulary.json  rxnorm_drugs.json  sample_notes.json  snomed_concepts.json
docs/: 01_data_model.md  02_data_structures.md  03_functions_decorators.md  04_oop_protocols.md  05_generators_async.md  06_capstone.md  Memory_README.md  api_reference.md  clinical_glossary.md  core_concepts_and_best_practices.md  index.md  project_planning.md  python_packaging_guide.md  python_skills_roadmap.md  testing_guide.md
src/clinicalnlp/: __init__.py
src/clinicalnlp/containers/: record_store.py  vocabulary.py
src/clinicalnlp/core/: clinical_record.py  fhir_bundle.py
src/clinicalnlp/pipeline/: __init__.py  transforms.py
src/clinicalnlp/streaming/: metaclasses.py  (+1 more)
tests/: conftest.py  test_containers.py  test_core.py  test_models.py  test_pipeline.py  test_streaming.py
tutorials/: 03_functions_decorators.py
