[project]
name = "clinicalnlp"
version = "0.1.0"
description = "Learn Fluent Python through clinical informatics NLP problems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ClinicalBridge Project"},
]
keywords = ["python", "clinical-nlp", "fhir", "omop", "fluent-python"]

dependencies = [
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "streamlit>=1.35",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ipython",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
